# SistemasLicencas

./: .env.prod.example  .gitignore  AGENTS.md  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
.github/workflows/: admin-web-ci.yml  ci.yml  idempotency-cleanup.yml  license-engine-contract.yml  sdk-python-ci.yml
apps/admin-web/: .env.example  Dockerfile  README.md  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/api/: .env.example  Dockerfile  README.md  jest.config.cjs  package.json  tsconfig.build.json  tsconfig.json
docs/: ERROR_MESSAGES_ARCHITECTURE.md  INDEX.md  README.md
docs/adr/: 0001-modular-monolith-first.md  0002-licensing-engine-adapter-keygen-first.md  0003-rest-api-v2-contract-first.md  0004-postgresql-redis-prisma-data-architecture.md  0005-observability-and-security-baseline.md  README.md
docs/api/: rewrite-api-design.md
docs/architecture/: data-flow.md  overview.md  rewrite-do-zero-validacao.md
docs/database/: migrations.md  rewrite-database-architecture.md  schema.md
docs/deployment/: admin-fullstack-docker-windows.md  configuration.md  docker.md  (+2 more)
scripts/: check-legacy-isolation.mjs  lint-docs.mjs
sdk/python/: pyproject.toml
sdk/python/examples/: browser_login_headless_smoke.py  browser_login_smoke.py
sdk/python/src/sistema_licencas_sdk/: __init__.py  auth_client.py  browser_login.py  errors.py  offline_validator.py  storage.py
sdk/python/tests/: test_auth_client.py  test_auth_client_integration.py  test_browser_login.py  test_offline_validator.py
(+368 files in other folders)
