[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sistema-licencas-sdk"
version = "0.1.0"
description = "Python SDK for Sistema Licencas v2 end-user auth"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27,<1.0",
  "authlib>=1.3,<2.0",
  "keyring>=25.0,<26.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.6,<1.0",
  "mypy>=1.11,<2.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: tests that require a live local API instance"
]
